--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vamos contar</title>
-    <link rel="stylesheet" href="estilo.css">
+    <link rel="stylesheet" href="estilo/estilo.css">
 </head>
 <body>
     <header>
@@ -25,6 +25,6 @@
     <footer>
         <p>&copy; Curso em Video</p>
     </footer>
-    <script src="script.js"></script>
+    <script src="script/script.js"></script>
 </body>
 </html>
